fix: update dark mode on landing page

--- a/public/scss/dark-mode/_dark-mode.scss
+++ b/public/scss/dark-mode/_dark-mode.scss
@@ -24,6 +24,10 @@
         color: var(--color-white);
     }
 
+    .feature-text {
+        color: var(--color-primary) !important;;
+    }
+
     .bg-color-white {
         background: var(--color-darker) !important;
         // background: var(--color-bodyest) !important;
